# ppauth

./: .gitignore  Cargo.toml  README.md  build.sh  pyproject.toml  setup.py
.github/workflows/: app.yml  test.yml
example/: main.py
ppauth/: cli.py
src/: lib.rs  request.rs  session.rs  state.rs
tests/: main.py  requirements.txt
