[package]
name = "ppauth"
version = "0.1.7"
edition = "2024"

[lib]
name = "ppauth"
crate-type = ["cdylib"]  # Pour générer la lib Python

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module", "abi3"] }
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
chrono-tz = "0.8"
clap = { version = "4.5", features = ["derive"] }
qrcode = "0.13"
image = "0.24"
otpauth = "0.5"
termion = "2.0"

